cluster/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'alertmanager.home.jamesmoriarty.xyz'
spec:
  rules:
  - host: 'alertmanager.home.jamesmoriarty.xyz'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-alertmanager
            port:
              number: 9093
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'grafana.home.jamesmoriarty.xyz'
spec:
  rules:
  - host: 'grafana.home.jamesmoriarty.xyz'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'prometheus.home.jamesmoriarty.xyz'
spec:
  rules:
  - host: 'prometheus.home.jamesmoriarty.xyz'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
